# f1-exploration

./: .gitignore  README.md  analysis_notebook.ipynb  data_extract.ipynb  eda.ipynb  pyproject.toml  qualifying_eda.ipynb  sample_notebook.ipynb
core/: dpi.py  extract.py  telemetry.py  utils.py
utils/: extract.py  telemetry.py
