[tool.poetry]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = ["akatelync <castillo.akatelyn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastf1 = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
