[tool.poetry]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = ["akatelync <castillo.akatelyn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastf1 = "^3.4.2"
sklearn = "^1.5.2"
seaborn = "^0.13.2"
tslearn = "^0.6.3"
fastdtw = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
