[project]
name = "f1-exploration"
version = "0.1.0"
dependencies = [
    "Jinja2",
    "MarkupSafe",
    "PyYAML",
    "Pygments",
    "RapidFuzz",
    "Send2Trash",
    "anyio",
    "appnope",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "babel",
    "beautifulsoup4",
    "bleach",
    "cattrs",
    "certifi",
    "cffi",
    "charset-normalizer",
    "comm",
    "contourpy",
    "cycler",
    "debugpy",
    "decorator",
    "defusedxml",
    "executing",
    "fastf1",
    "fastjsonschema",
    "fonttools",
    "fqdn",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "ipywidgets",
    "isoduration",
    "jedi",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-console",
    "jupyter-events",
    "jupyter-lsp",
    "jupyter_client",
    "jupyter_core",
    "jupyter_server",
    "jupyter_server_terminals",
    "jupyterlab",
    "jupyterlab_pygments",
    "jupyterlab_server",
    "jupyterlab_widgets",
    "kiwisolver",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "notebook",
    "notebook_shim",
    "numpy",
    "overrides",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "pexpect",
    "pillow",
    "platformdirs",
    "prometheus_client",
    "prompt_toolkit",
    "psutil",
    "ptyprocess",
    "pure_eval",
    "pycparser",
    "pyparsing",
    "python-dateutil",
    "python-json-logger",
    "pytz",
    "pyzmq",
    "referencing",
    "requests",
    "requests-cache",
    "rfc3339-validator",
    "rfc3986-validator",
    "rpds-py",
    "scipy",
    "seaborn",
    "six",
    "sniffio",
    "soupsieve",
    "stack-data",
    "terminado",
    "timple",
    "tinycss2",
    "tornado",
    "traitlets",
    "types-python-dateutil",
    "typing_extensions",
    "tzdata",
    "uri-template",
    "url-normalize",
    "urllib3",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "websockets",
    "widgetsnbextension",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
